--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "@types/node": "^15.12.2",
     "approvals": "^6.2.1",
-    "jest": "^29.1.2",
+    "jest": "^29.7.0",
+    "jest-cucumber": "^3.0.1",
     "prettier": "2.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.0.0",
